Fix z-index in order to show on top of currently obstructing elements

--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -245,6 +245,7 @@ body.-analysis {
 
   & > article > .modify {
     position: absolute;
+    z-index: 1;
     top: 246px;
     left: 805px;
 
